2010-01-29  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile.am: Add libmshtml.a and libmshtmled.a to build.
	* lib32/mshtml.def: New.
	* lib32/mshtmled.def: New.

2010-01-16  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/winusb.def: New.
	* lib64/winusb.def: New.
	* Makefile.am: Add both.

2010-01-15  Kai Tietz  <kai.tietz@onevision.com>
	Ozkan Sezer  <sezeroz@gmail.com>

	Change DISCLAIMER to DISCLAIMER.PD

2010-01-15  Philippe Dunski  <koala01@free.fr>

        * lib32/msvcrt.def (rand_s): New import symbol.
	* lib32/msvcr80.def (rand_s): Likewise.
	* lib64/msvcrt.def (rand_s): Likewise.
	* lib64/wmsvcrt.def (rand_s): Likewise.
	* lib64/msvcr80.def (rand_s): Likewise.

2010-01-15  Kai Tietz  <kai.tietz@onevision.com>

	* COPYING: New license text.
	* DISCLAIMER: Updated for New license text.
	* DISCLAIMER.PD: Moved old disclaimer template for PD.

2010-01-12  Ozkan Sezer  <sezeroz@gmail.com>

	* mingw-w64-headers/dirent.h: synchronized with the mingw.org
	version for correct operation with mingw-3.1x version requirements.
	* mingw-w64-crt/misc/dirent.c: reverted revision 76 change for bug
	#1801043, not valid any longer. (do we manually need to copy that
	field???)

2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>
	* Makefile.am (src_libmingwex): Add misc/tdelete.c
	misc/tfind.c misc/tsearch.c misc/twalk.c.
	* misc/tdelete.c: New.
	* misc/tfind.c: New.
	* misc/tsearch.c: New.
	* misc/twalk.c: New.
	* Makefile.in: Regenerated.

2010-01-04  Ozkan Sezer  <sezeroz@gmail.com>

	* configure.ac (--enable-wildcard): New configure time option in
	order to enable command line globbing by default.
	(__ENABLE_GLOBBING): New config.h macro, 0 or -1.
	* crt/wildcard.c: Updated to use the new __ENABLE_GLOBBING macro.
	* crt/CRT_noglob.c: New file with _dowildcard set as 0.
	* Makefile.am: Added crt/CRT_noglob.c to the build.
	* configure: Regenerated.
	* config.h.in: Regenerated.
	* Makefile.in: Regenerated.
